--- a/client/style/style.less
+++ b/client/style/style.less
@@ -972,7 +972,7 @@ main {
     }
 }
 
-#management-page, #management-teachers {
+#management-projects, #management-teachers, #management-curses {
 
     & .page-content {
         width: 40vw;
@@ -1002,7 +1002,7 @@ main {
         }
     }
 
-    & .new-project-card, .new-teacher-card {
+    & .new-project-card, .new-teacher-card, .new-curse-card {
         width: 100%;
         margin: 1rem 0rem 1rem 0rem;
         border-radius: 0.1rem 0.1rem 0.3rem 0.3rem;
@@ -1019,7 +1019,7 @@ main {
         & h1 {
             color: @primary-black;
             opacity: 0.8;
-            font-size: 1.6rem;
+            font-size: 1.4rem;
         }
 
         & h2 {
@@ -1032,10 +1032,10 @@ main {
         }
     }
 
-    & #projects-container, #teachers-container {
+    & #projects-container, #teachers-container, #curses-container {
         width: 100%;
 
-        & .project, .teachers {
+        & .project, .teacher, .curse {
             margin: 1rem 0rem 1rem 0rem;
             position: relative;
             background: lighten(@quaternary-white, 7%);
@@ -1068,19 +1068,26 @@ main {
 
             & p{
                 margin-bottom: 0rem;
+                font-size: 1rem;
             }
 
-            & .teacher-unit {
+            & .teacher-unit, .name-unit {
                 text-transform: uppercase;
                 font-family: @roboto-medium;
                 font-size: 1rem;
                 color: lighten(@secundary-black, 45%);
             }
 
-            & .teacher-name{
-                font-size: 1.2rem;
+            & .teacher-name, .curse-name {
+                font-size: 1.1rem;
                 font-family: @roboto-bold;
                 color: @primary-red;
+            }
+
+            .curse-name {
+                font-size: 1.1rem;
+                font-family: @roboto-bold;
+                color: @secundary-black;
             }
 
             & .teacher-curse{
