--- a/client/style/style.less
+++ b/client/style/style.less
@@ -73,7 +73,6 @@
 @roboto-medium: 'Roboto-Medium', sans-serif;
 @roboto-thin: 'Roboto-Thin', sans-serif;
 @font-size: 16px;
-
 body {
     font-size: 16px;
     padding: none;
@@ -104,7 +103,7 @@ header {
                 margin-left: -0.3rem;
             }
         }
-    }
+    }   
 }
 
 button {
@@ -115,6 +114,58 @@ button {
     padding: 0.5rem;
     font-family: @roboto-regular;
     font-size: 0.9rem;
+}
+
+.navbar-toggler {
+    top: 5px;
+    left: 5px;
+    height: 3rem;
+    aspect-ratio: 1 / 1;
+    background-color: @primary-red; /* Cor de fundo vermelha */
+    border-radius: .4rem; /* Bordas arredondadas */
+    padding: 0.5rem; /* Padding interno */
+    cursor: pointer; /* Cursor de ponteiro ao passar o mouse */
+    outline: none;
+    border: none;
+    z-index: 10000;
+}
+
+.menu-overlay {
+    z-index: 9999;
+}
+
+.navbar-toggler-icon {
+    display: block;
+    width: 1.5rem;
+    height: 0.2rem;
+    background-color: white; /* Cor do ícone */
+    border-radius: 0.125rem;
+    position: relative;
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar-toggler-icon::before,
+.navbar-toggler-icon::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: white; /* Cor das linhas do ícone */
+    border-radius: 0.125rem;
+    position: absolute;
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar-toggler-icon::before {
+    top: -0.6rem;
+}
+
+.navbar-toggler-icon::after {
+    top: 0.6rem;
+}
+
+.burger-button:focus {
+    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0); /* Exemplo de sombra ao focar */
 }
 
 main {
