--- a/client/style/style.less
+++ b/client/style/style.less
@@ -497,7 +497,7 @@ main {
                     background: @background-red;
                     color: @primary-white;
                     margin-bottom: 0.2rem;
-                    margin-top: 1.7rem;
+                    margin-top: 1rem;
                     padding: 0.550rem;
                 }
 
@@ -1110,7 +1110,7 @@ main {
     }
 }
 
-#teachers-area {
+#teachers-area, #coordinator-area{
     & .dinamic-content {
         padding-bottom: 3rem;
 
@@ -1137,16 +1137,15 @@ main {
                         height: 1.5rem;
                         width: 1.5rem;
                     }
-
                 }
             }
 
             & .profile-apresentation {
-                & .teacher-name {
-                    font-size: 1.7rem;
+                & .user-name {
+                    font-size: 1.6rem;
                 }
 
-                & .teacher-expertise {
+                & .user-expertise {
                     font-size: 1.2rem;
                     font-family: @roboto-regular;
                     font-weight: normal;
@@ -1160,7 +1159,6 @@ main {
                     width: 1.5rem;
                     height: 1.5rem;
                 }
-
             }
         }
 
