--- a/client/style/style.less
+++ b/client/style/style.less
@@ -1269,8 +1269,8 @@ main {
                 & .statistic{
                     & .graphic{
                         padding: 1rem;
-                        border-radius: 0.5rem;
-                        background: @quaternary-white;
+                        border-radius: 0.2rem;
+                        background: lighten(@quaternary-white, 5%);
 
                         & h4{
                             font-size: 1rem;
@@ -1281,7 +1281,7 @@ main {
 
                 & .access{
                     background: @terciary-white;
-                    border-radius: 0.4rem;
+                    border-radius: 0.2rem;
                     padding: 1rem;
 
                     & ul{
@@ -1290,6 +1290,13 @@ main {
                         & li{
                             list-style: none;
                             text-align: center;
+
+                            & a{
+                                text-decoration: none;
+                                color: @primary-black;
+                                font-family: @roboto-regular;
+                                font-size: 0.9rem;
+                            }
                         }
                     }
                 }
